[package]
name = "timer-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["ws"] }
dashmap = "5.4.0"
env_logger = "0.10.0"
futures = "0.3.28"
futures-ext = "0.0.0"
futures-util = "0.3.28"
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.1", features = ["cors"] }
uuid = { version = "1.3.4", features = ["v4"] }
